# small-prox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
smallprox/: core.py  mapper.py  server.py
tests/: test_mapping.py
